[gd_scene load_steps=19 format=2]

[ext_resource path="res://img/pixelart/bg.png" type="Texture" id=1]
[ext_resource path="res://img/art/cirnoHappy.png" type="Texture" id=2]
[ext_resource path="res://img/art/marisaBroom.png" type="Texture" id=3]
[ext_resource path="res://misc/Merchant Copy.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scenes/Intro.gd" type="Script" id=5]
[ext_resource path="res://audio/cirno-intro.mp3" type="AudioStream" id=6]
[ext_resource path="res://audio/cirno-bulk.mp3" type="AudioStream" id=7]
[ext_resource path="res://audio/record-scratch.mp3" type="AudioStream" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.360784, 0.388235, 0.45098, 0.568627 )

[sub_resource type="ImageTexture" id=2]

[sub_resource type="ImageTexture" id=3]

[sub_resource type="ImageTexture" id=4]

[sub_resource type="ImageTexture" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.360784, 0.388235, 0.45098, 0.815686 )
border_color = Color( 0.8, 0.8, 0.8, 0 )
expand_margin_bottom = 36.0

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.968627, 0.937255, 0.623529, 0.533333 )
border_color = Color( 0.8, 0.8, 0.8, 0 )
expand_margin_bottom = 36.0

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.360784, 0.388235, 0.45098, 0.568627 )
border_color = Color( 0.8, 0.8, 0.8, 0 )
expand_margin_bottom = 36.0

[sub_resource type="DynamicFont" id=9]
size = 48
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=10]
default_font = SubResource( 9 )
Button/colors/font_color = Color( 0.94902, 1, 1, 1 )
Button/colors/font_color_focus = Color( 0.478431, 0.854902, 0.921569, 1 )
Button/colors/font_color_hover = Color( 0.968627, 0.937255, 0.623529, 1 )
Button/colors/font_color_pressed = Color( 0.478431, 0.854902, 0.921569, 1 )
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 1 )
Button/styles/hover = SubResource( 1 )
Button/styles/normal = SubResource( 1 )
Button/styles/pressed = SubResource( 1 )
HSlider/icons/grabber = SubResource( 2 )
HSlider/icons/grabber_disabled = SubResource( 3 )
HSlider/icons/grabber_highlight = SubResource( 4 )
HSlider/icons/tick = SubResource( 5 )
HSlider/styles/grabber_area = SubResource( 6 )
HSlider/styles/grabber_area_highlight = SubResource( 7 )
HSlider/styles/slider = SubResource( 8 )
VBoxContainer/constants/separation = 10

[node name="Intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 295, -218 )
theme = SubResource( 10 )
script = ExtResource( 5 )

[node name="Bg" type="Sprite" parent="."]
position = Vector2( 477, 444 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Cirno" type="Sprite" parent="."]
position = Vector2( 141, 477 )
scale = Vector2( 0.323333, 0.323333 )
texture = ExtResource( 2 )

[node name="MarisaBroom" type="Sprite" parent="."]
position = Vector2( 1674, 160 )
rotation = -0.656244
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 72.0
margin_top = 48.0
margin_right = 538.0
margin_bottom = 153.0
autowrap = true

[node name="Tween" type="Tween" parent="."]

[node name="Intro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
autoplay = true

[node name="Cirno2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0

[node name="Recordo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0
pitch_scale = 0.8

[connection signal="finished" from="Intro" to="." method="_on_Intro_finished"]
